Fix footer white spacing.

--- a/CSS Files/Page-Resources.css
+++ b/CSS Files/Page-Resources.css
@@ -16,3 +16,7 @@ body {
 .div-main-contain {
     margin-bottom: 50px;
 }
+
+.footer p {  /* Selects text inside a <p> tag that is inside a .footer <div> */
+    margin-bottom: 0; /* removes default <p> tag margin from the bottom */
+}
